--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "textual-spinbox"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.2.0"
+description = "A simple spinbox widget for Textual"
 readme = "README.md"
 authors = [
     { name = "Frisco Rose", email = "friscorose@gmail.com" }
