--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "textual>=1.0.0",
+    "textual>=1.0.0,<2.1.3",
 ]
 
 [project.scripts]
